# yt-mcp-server

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  RULES.md  config.yaml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  working-on.md
.agent/skills/agents-md/: SKILL.md
.agent/skills/agents-md/references/: examples.md  format-guide.md
.agent/skills/commit-message-helper/: SKILL.md
.agent/skills/commit-message-helper/scripts/: validate_commit_msg.sh
.agent/skills/mcp-server-tester/: SKILL.md
.agent/skills/python-src-layout/: SKILL.md
.agent/workflows/: git-commit.md
agent-skill/youtube-mcp-server-guide/: SKILL.md
agent-skill/youtube-mcp-server-guide/references/: server-recovery.md
docs/: how-to-get-yt-api-key.md
modules/policy-mcp-server/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
modules/policy-mcp-server/assets/: README_entity_categories.md
modules/policy-mcp-server/entity_lists/: default.json
modules/policy-mcp-server/src/policy_mcp_server/: __init__.py  __main__.py  _embedding.py  _path_utils.py  exceptions.py  server.py
modules/policy-mcp-server/src/policy_mcp_server/tools/: cleanup.py  document.py  entity.py  findings.py  indexing.py  search.py
openspec/specs/youtube-transcripts/: spec.md
src/yt_mcp_server/: __init__.py  __main__.py  _config.py  server.py
src/yt_mcp_server/services/: __init__.py  _youtube_client.py  channel.py  playlist.py  transcript.py  video.py
tests/: test_transcript_service.py
(+8 files in other folders)
