[project]
name = "yt-mcp-server"
version = "0.1.0"
description = "YouTube MCP Server — YouTube data retrieval tools via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "google-api-python-client>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
yt-mcp-server = "yt_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_mcp_server"]

[tool.hatch.build]
packages = ["src/yt_mcp_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
