[project]
name = "policy-mcp-server"
version = "0.1.0"
description = "Policy MCP Server for privacy regulation analysis via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pymilvus>=2.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
policy-mcp-server = "policy_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_mcp_server"]

[tool.hatch.build]
packages = ["src/policy_mcp_server"]
